+ ThreadChecker is merged into trunk. Checker is compilable and     completelly integrated in current Stanse's framework. But, it has     not been properly tested yet.
git-svn-id: https://arran.fi.muni.cz/svn/stanse/trunk@665 98efdb2a-0913-0410-9d53-f03ad6a1d54d