@@ -3,7 +3,9 @@ package cz.muni.stanse.threadchecker;
 
 import cz.muni.stanse.checker.Checker;
 import cz.muni.stanse.checker.CheckerCreator;
+import cz.muni.stanse.checker.CheckerException;
 import java.io.File;
+import java.util.List;
 import java.util.LinkedList;
 
 public final class ThreadCheckerCreator extends CheckerCreator {
@@ -29,11 +31,24 @@ public final class ThreadCheckerCreator extends CheckerCreator {
     }
 
     @Override
-    public Checker create(LinkedList<File> args) throws Exception {
+    public Checker createIntraprocedural(final List<File> args)
+                                                       throws CheckerException {
+        throw new CheckerException("ThreadChecker is interprocedural only.");
+    }
+
+    @Override
+    public Checker createInterprocedural(final List<File> args)
+                                                       throws CheckerException {
         if(args.size()!=1) {
-            throw new Exception("Wrong number of arguments");
+            throw new CheckerException("Wrong number of arguments");
         }
-        CheckerSettings.getInstance().setConfigFile(args.getFirst());
+        try {
+            CheckerSettings.getInstance().setConfigFile(args.get(0));
+        }
+        catch(final Exception e) {
+            throw new CheckerException("Parsing config file '" +
+                                       args.get(0).toString() + "' has FAILED");
+        }
         Checker checker = new ThreadChecker();
         return checker;
     }
